Fix: 학습에 들어가는  텍스트 수정

--- a/fine_tuning/fine_tuning.ipynb
+++ b/fine_tuning/fine_tuning.ipynb
@@ -96,7 +96,7 @@
     "  with open(p, 'r') as f:\n",
     "    json_data = json.load(f)\n",
     "    image_list.append(image_path + json_data['images'][0]['file_name'])\n",
-    "    label_list.append(json_data['annotations'][0]['english'])"
+    "label_list = ['This is a photo of a bachelor kimchi.' for i in range(len(image_list))]"
    ]
   },
   {
@@ -109,15 +109,13 @@
     "dataset_size = len(dataset)\n",
     "train_size = int(dataset_size * 0.6)\n",
     "validation_size = int(dataset_size * 0.2)\n",
-    "test_size = dataset_size - (train_size + validation_size)\n",
     "\n",
     "# 데이터셋 분할\n",
-    "train_dataset, validation_dataset, test_dataset = random_split(dataset, [train_size, validation_size, test_size])\n",
+    "train_dataset, validation_dataset = random_split(dataset, [train_size, validation_size])\n",
     "\n",
     "# 데이터 로더 생성\n",
     "train_loader = DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
-    "validation_loader = DataLoader(validation_dataset, batch_size=128, shuffle=False)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=128, shuffle=False)"
+    "validation_loader = DataLoader(validation_dataset, batch_size=128, shuffle=False)"
    ]
   },
   {
